Ges has finished her edits to urge13

--- a/escrito/urge13.tex
+++ b/escrito/urge13.tex
@@ -54,6 +54,8 @@
 %    | ~G | u   | s   |
 %    |----+-----+-----|
  
+% Ges: leer cap Colomer y Negreto 2002 La gobernanza... in Mora y Donato Rels entre gob y congreso IIJ
+% Urgencia = suma+inmediata ... hasta 2014 urgencia sólo para suma
 
 \begin{document}
 
@@ -70,7 +72,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We claim that fast track mechanisms may conceal motivations unrelated to speed. We argue that this authority gives presidents the ability to protect bills and agreements from undesirable amendments, transforming the president into the sole member of a Rules Committee with the unique ability to impose close rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
+\noindent Among presidents' formidable proactive legislative powers is fast track authority, sometimes called urgency authority. Lawmakers face a short time limit to discuss and vote bills in this track. Seven Latin American presidents have this constitutional power. The U.S.\ president has also enjoyed it, as delegations from Congress. We show that fast track mechanisms conceal motivations unrelated to speed by inspecting the Chilean case, where penalties for congressional non-compliance with the deadline are absent. We argue that this authority gives presidents the ability to protect bills and agreements from undesirable amendments, transforming the president into the sole member of a Rules Committee with exclusive ability to impose close rules on the floor. We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
 
 % ME PARECE QUE ESTO DE CHILE NO TENDRIA QUE IR AHI, LO QUEREMOS HACER LO MAS GENERAL POSIBLE, NO? We suggest that the main reason behind the use of fast-track authority in Chile is to give presidents the ability to shield bills coming from friendly committees from floor amendments. Thus, instead of being a mechanism to speed up the process, presidents' fast-track authority is similar to imposing a "closed rule" on the floor.
 
@@ -192,7 +194,7 @@
 
 \section{Introduction}
 
-It is a fact of presidential systems that executives have legislative powers to achieve their goals. The most extended presidential legislative prerogative is the veto, yet many other procedures exist that enable presidents to be part of the lawmaking process alongside Congress. One of them is executive decree powers, a centerpiece in many presidential constitutions. Characterized upon first glance as usurpation of the legislature's decision rights, we know now that countries vary in the extent to which legislatures become involved in the approval of decrees. Another mechanism that increases presidents' influence in the legislative agenda is fast track authority. Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule and floor control. 
+It is a fact of presidential systems that executives have legislative powers. The most extended presidential legislative prerogative is the veto, yet many other procedures exist that enable presidents to be part of the lawmaking process alongside Congress. In terms of agenda setting, executive proposal rights set most presidents in Latin America apart from the US president. Executive decree powers are a centerpiece in many presidential constitutions. Characterized upon first glance as usurpation of the legislature's decision rights, we know now that countries vary in the extent to which legislatures become involved in the approval of decrees. Another mechanism that increases presidents' influence in setting the agenda is fast track authority. Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule and floor control. 
 %By using this prerogative, presidents can impose a deadline for legislators to discuss and vote bills. 
 %Compared to the US presidential system, where an impatient president has no formal resources to push legislators to act on stagnant legislation, broad reaching
 
@@ -219,12 +221,12 @@ Fast-track authority seems to contradict classic notions of separation of powers
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
 % federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
 
-Despite these concerns, eight presidential systems of the Americas give executives fast-track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, United States, and Uruguay \citep{morgenstern.2002b,garcia.montero.presidentes.2009}. 
+Despite these concerns, eight presidential systems of the Americas give executives fast-track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, United States, and Uruguay \citep{morgenstern.2002b}. 
 %cite Mercedes Garcia Montero, Nolte, etc. VER MERCEDES BOOK> 
 A shared characteristic of fast track authority, with the exception of the U.S., is that if the legislature fails to act within a certain period, the bill either becomes a law without the legislature's approval, or the whole legislative process comes to a halt until the floor votes on the bill. For example, in Brazil the president can declare any executive-initiated bill ``urgent'' at any time. The assembly must act on bills marked urgent within forty five days, else the bill takes precedence over all other legislative business. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the fast-tracked bill into law. Thus, by institutional design, the president has an effective tool to influence the congressional agenda, as she can force Congress to debate and vote on a bill.
 %\GES: me parece que aca lo tenemos que dejar asi, con solo estos dos ejemplos y explayarnos mas en el lit review, mas adelante.  Es la intro!
 
-However, it is puzzling that given the presumed motive of achieving a faster pace, some fast track mechanisms are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Mexico, Colombia and Chile, in which, if the legislature fails to act within the specified number of days, the bill neither becomes law nor stops the whole legislative process. Usually, the president simply reissues a new "urgency" label for the bill when the previous one expires. The existent literature has argued that the benefit of fast-track authority in these cases sometimes lies in its signaling capacity. Quoting a former legal chief of staff at the Chilean Presidency, \citet{berrios.gamboa.fiscChile.2006} describe simple urgency qualification as ``merely symbolic, exerting no real pressure on Congress'' (p.~117).\footnote{Three types exist in Chile, as we explain below. Simple urgencies provide a thirty day deadline.} Likewise, \citet{aleman.navia.UrgChi.2009} see urgencies as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. 
+However, it is puzzling that given the presumed motive of achieving a faster pace, some fast track mechanisms are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Colombia and Chile where, if the legislature fails to act within the specified number of days, the bill neither becomes law nor stops the whole legislative process. Usually, the president simply reissues a new "urgency" label for the bill when the previous one expires. The existent literature has argued that the benefit of fast-track authority in these cases sometimes lies in its signaling capacity. Quoting a former legal chief of staff at the Chilean Presidency, \citet{berrios.gamboa.fiscChile.2006} describe simple urgency qualification as ``merely symbolic, exerting no real pressure on Congress'' (p.~117).\footnote{Three types exist in Chile, as we explain below. Simple urgencies provide a thirty day deadline.} Likewise, \citet{aleman.navia.UrgChi.2009} see urgencies as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. 
 %Maybe add here some of the country details that Gisela is working on? This paragraph is too short!
  
 % ON CHILE - THIS GOES LATER The power of fast track authority in Chile fades when compared to its counterparts in the Americas. Although in Chile any bill can be declared urgent at any time, and the chamber must discuss and vote on the bill within 30 days (depending on the type of urgency), there are no consequences for non-compliance. When the period provided for Congress to act expires, the legislative process does not stop, nor do bills become law automatically. That is, there is no punishment for the legislature if it fails to make a decision within the specified number of days. Indeed, when the deadline for the expedite process is nearing, the president usually removes the previous urgency and issues a new one.  The data shows no difference in the speed of bills declared urgent, which take about 29 weeks until they reach the floor, and the rest, which take about 29.7 weeks. For example, in his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. Given that fast track authority does not seem to expedite legislation,one would expect the president not to use them at all. However, this is not the case: about 60 percent of executive proposals are declared urgent during the legislative process. Why?
@@ -244,7 +246,8 @@ However, it is puzzling that given the presumed motive of achieving a faster pac
 % ESTO TAMBIEN VA A LIT REVIEW Regarding the United States, \citet[][:145]{howell.moe.Relic2016} provide an argument in favor of providing presidents with fast-track authority. They argue that in order to have coherent, effective government, reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' 
 
 
-This paper builds on the puzzles presented by the existing literature and claims that fast-track authority may conceal purposes beyond providing signals or setting the agenda. We posit that the very need for speedy passage calls for mechanisms to accelerate the process, and those mechanisms, scarcely noticeable, protect bills from the amendment process on the floor. When the president labels a bill as urgent, this bill cannot be changed on the floor, which makes for a faster approval process but also protects presidential preferences.
+This paper builds on the puzzles presented by the existing literature and claims that fast-track authority may conceal purposes beyond providing signals or setting the agenda. We posit that the very need for speedy passage calls for mechanisms to accelerate the process, and those mechanisms, scarcely noticeable, protect bills from the amendment process on the floor. Therefore, when the president labels a bill as urgent, such bill cannot be changed on the floor, which makes for a faster approval process but also protects presidential preferences from modifications on the floor. In this way, working as a close rule, fast track authority turns the president into the sole member of a Rules Committee with the ability to protect bills on the floor and  locking-in the version of the bill that comes out from committee.
+
 
 
 
@@ -264,46 +267,10 @@ The case of Chile illustrates this point well. By means of fast-track authority,
 
 \vp{Como comenté antes, me parece que falta, en lo anterior, ``hints'' hacia la literatura con la que estamos discutiendo, o a la que pretendemos hacer un aporte. Si esa literatura es la de ``fast-track'' y restricted rules, cuáles serían las referencias y cuál la contribución del paper debería decirse en la intro (me gusta esta opción porque nos permite apuntar más alto). Si es la literatura sobre urgencias en chile vis a vis demás países latinoamericanos que tienen la potestad, habría que ver dónde conviene insertar esa discusión.}
 
-The paper proceeds as follows. Section 2 engages with the existent literature and describes the differences among fast track authority in presidentialisms in the Americas.  In section 3 we show the differences between bills with and without fast track authority, emphasizing how fast track can be used not only to speed up the process, but also to protect bills from the floor amendment process.  We schematize the sequence of committee reports and plenary readings to show that it is much harder to introduce plenary amendments to urgent than non-urgent bills. Section 4 extends a simple model of restrictive rules from the U.S.\ to fast track authority. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a committee report is vulnerable to floor amendments, she declares it urgent imposing a take-it-or-leave-it vote on the floor. We derive testable hypotheses. Section 5 tests them with data from Chile. Examination of all bills in the 1998--2014 period through multivariate analysis shows that, other features constant, bills reported by committees chaired by the president's party/coalition have a higher probability to become urgent. Section 6 concludes. 
+The paper proceeds as follows. Section 2 describes ALL THIS CHANGED NOW. 
+%the urgency process in Chile in more detail and presents the data. We elaborate on urgency degrees, a distinction of central importance to the study of this institution in Chile, offering our interpretation of urgency authority as a restrictive rule. Schematizing the sequence of committee reports and plenary readings shows that it is much harder to introduce plenary amendments to urgent than non-urgent bills. Section 3 extends a simple model of restrictive rules from the U.S.\ to the Chilean Congress. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a palatable committee report is vulnerable to floor amendments, declaring it urgent imposes a take-it-or-leave-it vote on the floor. We derive testable hypotheses. Section 4 tests some of them. Examination of all bills in the 1998--2014 period through multivariate analysis in search of urgency authority predictors shows that, other features constant, bills reported by committees chaired by the president's party/coalition (our measure of preference similarity between the president and the committee chair, driving some theoretical results) associates significantly with urgency messages. Section 5 concludes. 
 
 \vp{revisar este último párrafo cuando tengamos respuestas a mi comment anterior}
-
-\section{Fast-Track authority in the Americas}
-
-Fast track authority gives presidents substantial agenda setting prerogatives: it gives her the power to alter the agenda set by legislators and it forces the legislature to make a decision on a bill within a certain number of days.  The details regarding fast track authority vary across countries.  In general, fast track authority can be classified depending on whether Congressional action is required. While in some countries legislators have to make a decision for a bill to become law; in other countries, the bill becomes law immediately if Congress fails to act within a certain number of days. 
-
-The study of fast track authority in the Americas is not vast. The only study that compares the Constitution of different Latin American countries regarding urgency powers  is that of \citet{garcia.montero.presidentes.2009}. With a very detailed description of the constitutional powers of the different Latin American presidents, Garcia Montero argues that the more power presidents have to force the debate and vote on her proposals, the greater their role and influence in the legislative process. Garcia Montero creates a typology that classifies presidents in Latin America depending on the president's fast track powers. She emphasizes the differences in the institutional design among the different countries, situating Colombia and Brazil as the least powerful, and Paraguay as the most. In the middle, from least to most powerful are Chile, Uruguay, and Ecuador.  
-
-In the edited volume on lawmaking in Latin America, \citet{aleman-tsebelis-2016-book}, as well as the individual country-authors mention urgency powers as one of the tools presidents use to set the agenda. Their treatment is not extensive, although they provide valuable analysis that we mention later in the text. In the conclusion, Aleman and Tsebelis explain that presidents ``use urgency motions to prioritize bills in the congressional calendar''.  Other scholarship looks specifically at individual countries. Probably the most prolific literature is that on the urgency powers of the Chilean president, which reaches conflictive conclusions. No analysis exists of Ecuador, Colombia Mexico, or Paraguay. The studies on Brazil tend to focus on the presidential decree powers rather than her urgency prerogatives. For the United States, there are many studies that look into the effect of fast track authority on trade policy, and whether Congress or the executive has the upper hand on it. 
-
-In what follows we describe in more detail the institutional characteristics of fast track authority in the different countries in the Americas, as well as the arguments the literature has put forth. 
-
-Among the countries where urgent bills need congressional approval are Brazil, Chile,  Colombia, and Mexico. In Brazil, the president may demand urgency for consideration of a bill at any time during the legislative process, and each chamber has to make a decision over the urgent bill within 45 days. If it fails to do so, Congress comes to a halt until it approves or rejects the urgent bill (art. 64, Brazil Constitution). Although \citet{hiroi-renno-2016} find that urgent bills have a higher probability of passage, \citet{figueiredo.limongi.2000} argue that the prerogative ``is not extensively used since the provisional decree is a much more efficient way of speeding up and approving legislation''.
-
-Although in Chile any bill can be declared urgent at any time, and the chamber must discuss and vote on the bill within 30 days (depending on the type of urgency), there are no consequences for non-compliance. When the period provided for Congress to act expires, the legislative process does not stop, nor do bills become law automatically. That is, there is no punishment for the legislature if it fails to make a decision within the specified number of days. Indeed, when the deadline for the expedite process is nearing, the president usually removes the previous urgency and issues a new one.  
-
-The design of the urgency prerogative in Colombia and Mexico is very close to Chile's: neither has a reversion point if the legislature does not act within the provided time limit \citep{nolte.2003}.  In Colombia, the president can attach the urgent label to any kind of bill, even the annual budget, and the legislature has to approve or reject the urgent bill within 60 days (30 days for each chamber). Mexico's president, who was granted urgency powers in 2012, may introduce two initiatives at the beginning of each legislative period and tag them as urgent. Each chamber has thirty days to vote on the bill, but,  as the case of Chile and Colombia, the Constitution says nothing about how to proceed in case Congress fails to act. 
-
-Although the are no studies of urgency use in Colombia, and the Mexico case is too recent to provide sufficient data, some studies on Chile have curious findings. The data for Chile shows no difference in the speed of bills declared urgent, which take about 29 weeks until they reach the floor, and the rest, which take about 29.7 weeks. For example, in his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. Given that fast track authority does not seem to expedite legislation, one would expect the president not to use them at all. However, this is not the case: about 60 percent of executive proposals are declared urgent during the legislative process. 
-
-In the same line, when analyzing the relationship between Congress and the president, \citet[][:51]{nolte.2003} argues that fast track authority does not give the Chilean president an important power to determine the fate of her initiatives. He claims that in Chile an urgent bill still needs congressional support to become law, so the size and discipline of the president's congressional majority is the determinant factor, way more important than the institutional prerogatives to declare bills urgent.  He also emphasizes that the President has no mechanism to sanction Congress if the latter does not act within a certain number of days.
-
-Other authors note even though urgent bills do not carry strong weight, they might be used as a signaling device. \citet{aleman.navia.UrgChi.2009} argue that the bills the president declare urgent are those that encompass the president's legislative priorities. They find that ``bills that receive immediate and suma urgency motions appear significantly more likely to pass'' (p.~404). Although these findings do show that the president's priorities do become law, it is not clear what is the mechanisms behind the ``urgent'' label. We also find that many authors note that urgent bills are at the top of the agenda, leading them to argue that the main effect of urgencies is to determine the schedule, in committees and on the floor \citep{aninat.exagCoop2006}. 
-
-In other three countries (Uruguay, Ecuador, and Paraguay), the specific details of fast track authority confer the President greater power because if Congress does not act within a certain number of days, the bill immediately becomes law. This type of urgency increases significantly the legislative powers of the president, as it allows her to change the status quo with a ``law'' without any congressional action. However, these countries do have some institutional mechanisms that attempt to control the presidential power. 
-
-In Uruguay, the president cannot label urgent some bills like the budget, as well as bills that need the support of three fifths or two thirds of the chamber to become law. Furthermore, only one bill at a time can be declared urgent and, more significantly, each chamber can reject the ``urgency'' label by a vote of three fifths of the membership. However, if an urgent bill is not addressed by the floor within a maximum of 100 days, it becomes law automatically.
-
-In Ecuador, the 1998 and 2008 Constitution constrains the president in that he can only label as urgent one bill at a time, and only those related to the economy. Congress has 30 days to modify, approve or reject the urgent bill. Otherwise, it becomes law \citep{morgenstern-polga-shair.2013}.
-
-Paraguay has the most permissive prerogatives for the president. The 1992 Constitution gives the president latitude to declare urgent any type of bill, at any point during the legislative process. Each chamber has 30 days to make a decision. Otherwise, the bill becomes law.
-
-The U.S.\ case is a bit different as it grants presidents fast track authority on one issue, international trade agreements. Under this authority, international trade agreements are considered under ``expedited legislative procedures'' \citep{crs-2015-tpa}. In this way, the chambers suspend their ordinary legislative procedures: once they reach the floor, agreements cannot be amended and have to be debated and approved within a certain period of time.  On its part, the president needs to commit to consult with the relevant committees during the negotiation process and to notify Congress ninety days before signing an agreement. The idea behind fast track authority in these agreements is to increase the leverage of the president when negotiating them: other countries know that whatever agreement they reach, it will be approved fast and unamended.  The expedited legislative procedures under fast track were first included in the Trade Act of 1974, and modified a few times after that.  An important element in this fast track authority is that it is subject to time limits. In 1974, Congress granted the president this authority for five years, ending in January 1980. Congress renewed this authority various times, interrupting it for 8 years from 1994 until the Trade Act of 2002, in which a Republican majority granted fast track authority to president George W.\ Bush.  This authority expired in 2007, although it remained in effect until 2011 for those agreements that were already under negotiation. Obama requested the renewal of fast track authority immediately after that, but it was only granted it in 2015.
-
-The literature analyzing president's fast track authority in the US tries to understand the conditions under which Congress will delegate this authority to the President.  Some scholars argue that legislators prefer to delegate trade authority on the president because the president is better able to resist the pressures from interest groups. Thus, legislators tie their hands and insulate themselves from these lobbying efforts \citep[e.g.][]{destler-1992,destler-1991,margolis-1986,haggard-1988,goldstein-1988}. Others argue that even though legislators delegate this authority, they still have mechanisms to control the president through oversight and procedural constraints \citep[e.g.][]{kiewiet.mccubbins.1991,mcnollgast.1987}. In a more nuanced view, \citet{lohmann-ohalloran.1994} argue that Congress constrains the president under divided government and when partisan conflict is high. 
-
-In an excellent, but  very provocative book, \citet[][:145]{howell.moe.Relic2016} make an argument in favor of giving US presidents with fast-track authority in all realms of policies, not just trade agreements. They argue that in order to have a coherent and effective government, a constitutional reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' If Congress fails to act with a certain period of time, then the presidential proposal should become law. This reform would make the US closer to the design of Uruguay, Ecuador, or Paraguay in Latin America. 
-
 
 \section{Fast-Track Legislation}
 
@@ -756,7 +723,7 @@ We now derive empirical implications from our theoretical model by generalizing 
 
 The example discussed falls under profile I (the status quo falls where $P_C \leq q < P$). The equilibrium proposal and consideration regime discussed above, and the equilibrium outcome are listed accordingly. The discrete zones into which the policy space subdivides (the dark-gray, light-gray, and white rectangles) isolate status quos with unchanging equilibrium elements. One or more equilibrium elements mutate for status quos falling in the adjacent zone(s).
 
-Our main question is under which conditions a bill will become urgent?  In other words, when will the president decide to assign the ``urgency'' title to a bill?  We pay attention to consideration regimes: in equilibrium, status quos in dark-gray zones trigger urgent consideration, and those in white zones trigger standard consideration. Status quos in light-gray zones lack a consideration regime because they push the committee to defend the status quo by withholding the bill (gate-keeping). Aided by auxiliary assumptions, empirical implications follow from comparative statics; we discuss three. To start, note that dark-gray zones predominate in Figure \ref{F:predictions} over the light-gray and white. Urgent status corresponds to dark-gray, and the first theoretical prediction follows:
+Our main question is under which conditions a bill will become urgent?  In other words, when will the president decide to assign the "urgency" title to a bill?  We pay attention to consideration regimes: in equilibrium, status quos in dark-gray zones trigger urgent consideration, and those in white zones trigger standard consideration. Status quos in light-gray zones lack a consideration regime because they push the committee to defend the status quo by withholding the bill (gate-keeping). Aided by auxiliary assumptions, empirical implications follow from comparative statics; we discuss three. To start, note that dark-gray zones predominate in Figure \ref{F:predictions} over the light-gray and white. Urgent status corresponds to dark-gray, and the first theoretical prediction follows:
 
 \begin{description}
   \item [Hypothesis 1] Other things constant, urgent bill consideration is more likely than standard bill consideration. 
@@ -783,17 +750,17 @@ For the next implication, see what happens when the distance separating $C$ and 
   \item [Hypothesis 3] Other things constant, the likelihood of gate-keeping is never larger when the bill's reporting committee chair belongs to to the president's coalition than to the opposition. 
 \end{description}
 
-\section{Data and Urgency Degrees: the case of Chile}
+\section{Data and urgency degrees: the case of Chile}
 
 We use the Chilean case to test our hypotheses regarding the use of fast tracking authority as a mechanism to constrain floor amendments. We collected original data for Chile between 1998 and 2014.\footnote{The Cámara de Diputados' web page (\url{www.camara.cl}) was scraped in November 2014 to retrieve the record (\emph{boletín}) of every proposal made between 11 March 1998 and 10 March 2014, inclusive.} We compiled information on every bill introduced in Congress between 11 March 1998 and 10 March 2014: who introduced the bill, when, in which chamber, the issue it deals with, its status at the time of consultation, and so forth. We also gathered information on the chronological detail of the bill's legislative process in the House: committee referrals and reports, floor discussion and voting, navette to the Senate, and more. Of direct relevance, we coded all urgency messages received by the Cámara. 
 
 The Chilean Constitution of 1980 sets the institutional order allocating decision rights across the branches in Chile. Presidents are elected for four-year terms and immediate reelection is forbidden. Legislators are elected through direct elections in two-member districts. Its 120 Lower House representatives are elected for four-year terms, while the thirty-eight senators serve eight-year terms.\footnote{A reform of the electoral system approved in April 2015, increased the number of legislators and proportionality. Changes became effective in the 2017 elections, affecting the new composition of congress.} Throughout the nineties and at least until 2018, parties in Congress have organized in two stable coalitions, the center-left Concertación (later Nueva Mayoría), and the center-right Alianza (later Chile Vamos). 
 
-As in other presidential systems, Chilean presidents concentrate considerable legislative power (Siavelis 2002; Payne, 2006; Author, 2017). Their prerogatives include exclusive proposal power in key legislative areas such as the budget, finance, and administration. The president can affect the congressional agenda by marking bills “urgent”, which imposes time constraints on their discussion. She can also propose amendments to bills under consideration. In the twenty-four years between the return to democracy and the end of Piñera’s administration in 2014, a total of 8,483 bills were proposed. The Chilean congress passed 2,617 of those bills (approximately one third). Most of these bills had been marked urgent at some point of their life span, and defying common sense, some were marked urgent several times. 
+As in other presidential systems, Chilean presidents concentrate considerable legislative power (Siavelis 2002; Payne, 2006; Author, 2017). Their prerogatives include exclusive proposal power in key legislative areas such as the budget, finance, and administration. The president can affect the congressional agenda by marking bills “urgent”, which imposes time constraints on their discussion. She can also propose amendments to bills under consideration. In the twenty-four years between the return to democracy and the end of Piñera’s administration in 2014, a total of 8,483 bills were proposed. The Chilean congress passed 2,617 of those bills (approximately one third). Most of these bills had been marked urgent at some point of their life span, and defying commom sense, some were marked urgent several times. 
+%ON CHILE: However, counter mainstream expectations that more powerful presidents use their prerogatives more broadly (O’Donnell 1993, 1994), Chilean politics function in a consensual manner and presidents rarely use their more confrontational prerogatives, such as decrees and total vetoes. As other Latin American presidents, the Chilean president can enact legislation by decree, what Shugart and Carey (1998) term Constitutional Decree Authority. However, between 1990 and 2014 only two decrees were enacted in Chile, as opposed to hundreds enacted in Argentina (694 between 1983 and 2007) and Brazil (744 between 1988 and 2010). This paper assumes that consensual behavior is crafted through institutional procedures. Understanding which procedures are key in this regard is part of this paper's contribution. %It sets out to understand the conditions under which presidents can move along their agendas while maintaining politics consensual. 
 
-However, counter mainstream expectations that more powerful presidents use their prerogatives more broadly (O’Donnell 1993, 1994), Chilean politics function in a consensual manner and presidents rarely use their more confrontational prerogatives, such as decrees and total vetoes. As other Latin American presidents, the Chilean president can enact legislation by decree, what Shugart and Carey (1998) term Constitutional Decree Authority. However, between 1990 and 2014 only two decrees were enacted in Chile, as opposed to hundreds enacted in Argentina (694 between 1983 and 2007) and Brazil (744 between 1988 and 2010). This paper assumes that consensual behavior is crafted through institutional procedures. Understanding which procedures are key in this regard is part of this paper's contribution. 
 
-%It sets out to understand the conditions under which presidents can move along their agendas while maintaining politics consensual. 
+
 
 %\vp{Sacaría lo siguiente: Queries had been sent to congressional staff in October 2014 about the existence of an official API or FTP site where this well-structured data could be downloaded en bloc. There was no response. An automated script was then prepared to retrieve the information directly. The Cámara's web page is JavaScript-rich, an obstacle surmounted with \texttt{Python}'s Selenium library, putting together the bits and pieces of the scraping process. PERO VERIFICAR QUE LO QUE SIGUE ESTE EN LA FOOTNOTE "A commented version... HASTA ... of an earlier presidency)."} A commented version of the script and the data-set will be posted online upon publication. Data analysis was done with a multiplicity of \texttt{R}'s libraries.} Earlier years antedate Internet publication and were dropped, as data completeness in the primary source remains to be verified. The period selected fully covers two Senates, four Cámaras, and three presidencies (plus the last two years of an earlier presidency). 
 
